fixed subtitle wrapping

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -33,7 +33,6 @@
     color: $gray-light;
     font-family: $secondary-font-family;
     font-size: 1em;
-    line-height: 0.1em;
     margin: 15px 0px 10px 0px;
 }
 
